# BeatBox_Backend

./: .gitignore  README.md  alembic.ini  pyproject.toml
beatbox_backend/: database.py  main.py  server.py  settings.py
beatbox_backend/models/: music.py
beatbox_backend/routes/: beat.py  music.py  other.py  vocal.py
migrations/: env.py  script.py.mako
migrations/versions/: 601dba411951_init_db.py  671e1de3b3f6_init_db.py  81521d0667aa_update_vocal.py  99557d962b1d_add_img.py  d74d06d45e11_update_music_model.py
